# fiscal-de-musica

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py  start.bat
backend/: config.py  db.py  main.py
backend/routers/: albums.py  artistas.py  images.py  lastfm.py  scrobbles.py  settings.py  stats.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  image-helpers.js  modal.js  utils.js
frontend/js/pages/: albums.js  artistas.js  dashboard.js  image-queue.js  scrobbles.js  settings.js  stats.js
scripts/: check_inconsistency.py  download_artists_images.py  download_images.py  download_scrobbles_from_zero.py  download_scrobbles_incremental.py
